--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -21,6 +21,7 @@ version: 1.0.0+1
 environment:
   sdk: ^3.7.2
 
+
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
 # consider running `flutter pub upgrade --major-versions`. Alternatively,
@@ -37,6 +38,8 @@ dependencies:
   shared_preferences: ^2.2.2
   image_picker: ^1.0.4
   http: ^1.3.0
+  provider: ^6.1.4
+  google_maps_flutter: ^2.5.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
