--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   http: ^1.3.0
   provider: ^6.1.4
   google_maps_flutter: ^2.5.3
+  latlong2: ^0.9.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -72,6 +73,18 @@ flutter:
     - assets/icons/google.png
     - assets/icons/kakao.png
     - assets/icons/naver.png
+    - assets/images/test0.jpg
+    - assets/images/test1.jpg
+    - assets/images/test2.jpg
+    - assets/images/test3.jpg
+    - assets/images/test4.jpg
+    - assets/images/test5.jpg
+    - assets/images/test6.jpg
+    - assets/images/test7.jpg
+    - assets/images/test8.jpg
+    - assets/images/test9.jpg
+
+
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
