doc: Flutter 관련 .gitignore 정리

--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -17,6 +17,7 @@ migrate_working_dir/
 *.ipr
 *.iws
 .idea/
+**/.idea/
 
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
@@ -31,7 +32,8 @@ migrate_working_dir/
 .flutter-plugins-dependencies
 .pub-cache/
 .pub/
-/build/
+build/
+**/build/
 
 # Symbolication related
 app.*.symbols
@@ -43,3 +45,9 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Flutter platform-specific artifacts
+**/linux/flutter/
+**/macos/Flutter/
+**/windows/flutter/
+**/ios/flutter/
