--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   provider: ^6.1.4
   google_maps_flutter: ^2.5.3
   latlong2: ^0.9.0
+  flutter_dotenv: ^5.1.0
+  flutter_secure_storage: ^9.0.0
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -83,6 +86,7 @@ flutter:
     - assets/images/test7.jpg
     - assets/images/test8.jpg
     - assets/images/test9.jpg
+    - .env
 
 
   # The following line ensures that the Material Icons font is
