Flutter 내부 gitignore 추가

--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -45,3 +45,9 @@ app.*.map.json
 /android/app/release
 
 .env
+
+# Flutter platform-specific artifacts
+**/linux/flutter/
+**/macos/Flutter/
+**/windows/flutter/
+**/ios/flutter/
