--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   latlong2: ^0.9.0
   flutter_dotenv: ^5.1.0
   flutter_secure_storage: ^9.0.0
+  path_provider: ^2.1.1
 
 
   # The following adds the Cupertino Icons font to your application.
